# AI-Movie-Player

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  changelog-cn.md  clippy.toml  contributing-cn.md  readme-cn.md
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ai-workflow-idea.yml  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  dependency-review.yml  labeler.yml  package.yml  release.yml  stale.yml
docs/: github-launch-kit-cn.md  github-launch-kit.md  release-package-v0.2.1-cn.md  release-package-v0.2.1.md  starter-issues-cn.md  starter-issues.md
scripts/: cargo-sparse-proxy.ps1  cargo-sparse-proxy.py  package-linux.sh  package-macos.sh  package-windows.ps1  run-cargo-via-proxy.ps1
src/: app.rs  lib.rs  main.rs
src/ai/: chat.rs  context.rs  mod.rs  recommend.rs  review.rs
src/api/: ai.rs  mod.rs  tmdb.rs
src/config/: mod.rs  settings.rs
src/core/: file_organizer.rs  filename_parser.rs  library_manager.rs  metadata_service.rs  mod.rs  subtitle_finder.rs
src/db/: connection.rs  migrations.rs  mod.rs  models.rs  movies.rs  settings.rs  subtitles.rs  tests.rs  watchlist.rs
src/thumbnail/: cache.rs  mod.rs
src/ui/: add_movie.rs  ai_chat_panel.rs  ai_recommend_panel.rs  animation.rs  batch_ops.rs  fonts.rs  icons.rs  layout.rs  mod.rs  movie_detail.rs  poster_wall.rs  settings_panel.rs  subtitle_panel.rs  theme.rs  watchlist_panel.rs  widgets.rs
src/util/: error.rs  mod.rs
tests/: ai_live.rs
