[package]
name = "ai-movie-player"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["ifq.ai"]
description = "AI-native local movie library companion: system-player launch, cinematic chat, taste-aware recommendations, subtitles, metadata, poster wall — by ifq.ai"
homepage = "https://ifq.ai"
repository = "https://github.com/peixl/AI-Movie-Player"
license = "MIT"
readme = "README.md"
keywords = ["movie-library", "ai", "egui", "tmdb", "desktop-app"]
categories = ["multimedia", "gui"]

[dependencies]
# GUI
eframe = "0.32"
egui = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "query", "gzip", "brotli", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled", "serde_json"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# File operations
rfd = "0.17"
walkdir = "2"
regex = "1"

# Subtitle
encoding_rs = "0.8"
zip = "7"

# HTML scraping
scraper = "0.27"

# Config
toml = "1.1"
directories = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Async utilities
futures-util = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
tempfile = "3"
url = "2"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
